--- a/public/cms/docs/_config.yml
+++ b/public/cms/docs/_config.yml
@@ -11,7 +11,7 @@ plugins:
 
 navigation:
   - title: Installation
-    url: index.html
+    url: index.blade.php
     icon: fas fa-microchip
   - title: Dependencies & Plugins
     url: dependencies.html
